# IRCBot

./: CMakeLists.txt  LICENSE  README
src/: irc_thread.cpp  irc_thread.h  main.cpp  stack_overflow_thread.cpp  stack_overflow_thread.h
